--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <li>Кредит</li>
           </ul>
 
-          <div class="slides">
+          <section class="slides">
             <div class="slide-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
@@ -225,7 +225,7 @@
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
               <a href="#">Отправить заявку</a>
             </div>
-          </div>
+          </section>
         </div>
       </div>
     </section>
