--- a/catalog.html
+++ b/catalog.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="format-detection" content="telephone=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/min.normalize.css">
+  <link rel="stylesheet" href="css/min.style.css">
   <title>Перфораторы</title>
 </head>
 
@@ -14,8 +16,8 @@
 
   <header class="page-header-catalog">
 
-    <div class="header-top">
-      <div class="container">
+    <div class="page-header-top">
+      <div class="conteiner">
         <div class="header-logo">
           <a href="index.html">
             <img class="logo" src="img/logo.png" width="110" height="18" alt="Техномарт">
@@ -61,14 +63,13 @@
 
 
     <div class="page-header-info">
-      <div class="container">
+      <div class="conteiner">
         <div class="header-info">
           <div class="slogan">
             <h1 class="header-slogan">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
           </div>
           <div class="header-contacts">
-            <!-- x-ms-format-detection="none" Чтобы EDGE не переопределял стили телефона -->
-            <p class="header-info-phone" x-ms-format-detection="none">+7 (812) 555-05-55</p>
+            <p class="header-info-phone">+7 (812) 555-05-55</p>
             <p class="header-info-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="header-user">
@@ -89,7 +90,6 @@
               	<polygon  points="21,8.5 12.125,0 12.125,6 6.125,6 6.125,11 12.125,11 12.125,17" fill="#c5c5c5" />
               	<path d="M3.106,13.952V3.048c0.018-0.376,0.171-1.057,1.01-1.057h5.027V0H4.116C1.938,0,1.112,1.81,1.087,3.027
               		v10.946C1.112,15.189,1.938,17,4.116,17h5.027v-1.99H4.116C3.277,15.01,3.124,14.327,3.106,13.952z"   fill="#c5c5c5" />
-
               </svg>
               </button>
             </span>
@@ -97,7 +97,6 @@
             <a class="personal-area" href="#">Личный кабинет</a>
           </div>
         </div>
-
 
         <nav class="main-menu">
           <ul class="navigation">
@@ -114,10 +113,9 @@
     </div>
   </header>
 
-
   <main class="main-site">
 
-    <div class="container">
+    <div class="conteiner">
       <ul class="breadcrumbs">
         <li>
           <a class="breadcrumbs-way breadcrumbs-home" href="index.html"><span class="visually-hidden">Главная</span></a>
@@ -136,12 +134,11 @@
       <h2 class="perforator-block">Перфораторы</h2>
     </div>
 
-    <div class="goods-column container">
+    <div class="goods-column conteiner">
       <section class="filter">
         <h2 class="visually-hidden">Фильтр</h2>
 
         <p class="filter-block">Фильтр:</p>
-
 
         <!-- ФОРМА ПОЛЗУНКА ВЫБОРА ДИАПОЗОНА -->
         <form class="filter-manufacturers" action="https://echo.htmlacademy.ru" method="get">
@@ -165,11 +162,11 @@
                 <input class="filter-price-min" id="price-min" type="text" name="minimal" value="0">
               </div>
 
-                <div class="filter-item">
-                  <label class="visually-hidden" for="price-max">Цена до</label>
-                  <input class="filter-price-max" id="price-max" type="text" name="maximal" value="30000">
+              <div class="filter-item">
+                <label class="visually-hidden" for="price-max">Цена до</label>
+                <input class="filter-price-max" id="price-max" type="text" name="maximal" value="30000">
               </div>
-                </div>
+            </div>
 
           </fieldset>
 
@@ -396,7 +393,7 @@
     </div>
 
     <div class="drill-presses">
-      <div class="container">
+      <div class="conteiner">
         <h2 class="about-drill">Пара слов о перфораторах</h2>
         <p>Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
          Сущестуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта
@@ -408,68 +405,65 @@
 
   <footer class="main-footer main-footer-catalog">
     <div class="footer-top">
-      <div class="container footer-top-column">
+      <div class="conteiner footer-top-column">
         <div class="footer-contacts">
           <div class="logo-footer">
             <img class="logo" src="img/logo-footer.png" width="138" height="21" alt="Техномарт">
-
           </div>
-            <!-- x-ms-format-detection="none" Чтобы EDGE не переопределял стили телефона -->
-            <p class="footer-addres" x-ms-format-detection="none">
-              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55
-
+          <p class="footer-addres">
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55
           </p>
+        </div>
+
+        <div class="footer-navigation">
+          <div class="footer-menu-company">
+            <ul class="footer-nav-company">
+              <li>
+                <a class="company-menu" href="#">Компания</a>
+              </li>
+              <li>
+                <a class="company-menu" href="#">Новости</a>
+              </li>
+              <li>
+                <a class="company-menu" href="#">Каталог</a>
+              </li>
+              <li>
+                <a class="company-menu" href="#">Доставка</a>
+              </li>
+              <li>
+                <a class="company-menu" href="#">Контакты</a>
+              </li>
+            </ul>
           </div>
 
-          <div class="footer-navigation">
-            <div class="footer-menu-company">
-              <ul class="footer-nav-company">
-                <li>
-                  <a class="company-menu" href="#">Компания</a>
-                </li>
-                <li>
-                  <a class="company-menu" href="#">Новости</a>
-                </li>
-                <li>
-                  <a class="company-menu" href="#">Каталог</a>
-                </li>
-                <li>
-                  <a class="company-menu" href="#">Доставка</a>
-                </li>
-                <li>
-                  <a class="company-menu" href="#">Контакты</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="footer-menu-goods">
-              <ul class="footer-nav-goods">
-                <li>
-                  <a class="goods-menu" href="#">Материалы</a>
-                </li>
-                <li>
-                  <a class="goods-menu" href="#">Техника</a>
-                </li>
-                <li>
-                  <a class="goods-menu" href="#">Инструмент</a>
-                </li>
-                <li>
-                  <a class="goods-menu" href="#">Спецпредложения</a>
-                </li>
-              </ul>
-            </div>
+          <div class="footer-menu-goods">
+            <ul class="footer-nav-goods">
+              <li>
+                <a class="goods-menu" href="#">Материалы</a>
+              </li>
+              <li>
+                <a class="goods-menu" href="#">Техника</a>
+              </li>
+              <li>
+                <a class="goods-menu" href="#">Инструмент</a>
+              </li>
+              <li>
+                <a class="goods-menu" href="#">Спецпредложения</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="footer-bottom">
-        <div class="container footer-bottom-column">
-          <p class="footer-copyright">
-            &copy; 2010-2017 Компания «Техномарт» Все права защищены
-          </p>
+    <div class="footer-bottom">
+      <div class="conteiner footer-bottom-column">
+        <p class="footer-copyright">
+          &copy; 2010-2017 Компания «Техномарт» Все права защищены
+        </p>
 
-          <div class="footer-social">
-            <a class="btn-social btn-vk" href="#" target="_blank"><span class="visually-hidden">ВКонтакте</span>
+        <div class="footer-social">
+          <a class="btn-social btn-vk" href="#" target="_blank"><span class="visually-hidden">ВКонтакте</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           	 width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15" xml:space="preserve">
             <path fill="#ffffff"             d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,  0.681,1.727,0.534,1.727,0.534l3.473-0.05
@@ -484,13 +478,13 @@
             	c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z"/>
             </svg>
           </a>
-            <a class="btn-social btn-fb" href="#" target="_blank"><span class="visually-hidden">Facebook</span>
+          <a class="btn-social btn-fb" href="#" target="_blank"><span class="visually-hidden">Facebook</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             	 width="12px" height="22px" viewBox="0 0 12 22" enable-background="new 0 0 12 22" xml:space="preserve">
             <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z"/>
             </svg>
           </a>
-            <a class="btn-social btn-inst" href="#" target="_blank"><span class="visually-hidden">Instagram</span>
+          <a class="btn-social btn-inst" href="#" target="_blank"><span class="visually-hidden">Instagram</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             	 width="21px" height="21px" viewBox="0 0 21 21" enable-background="new 0 0 21 21" xml:space="preserve">
             <path fill="#FFFFFF" d="M18,0H3C1.35,0,0,1.35,0,3v15c0,1.65,1.35,3,3,3h15c1.65,0,3-1.35,3-3V3C21,1.35,19.65,0,18,0z M10.5,7
@@ -498,24 +492,24 @@
             	c0,3.59,2.91,6.5,6.5,6.5s6.5-2.91,6.5-6.5c0-0.517-0.066-1.018-0.181-1.5H18V18z M18,7h-4V3h4V7z"/>
             </svg>
           </a>
-          </div>
+        </div>
 
-          <div class="footer-communication">
-            <p class="footer-feedback">
-              Обратная связь:
-              <a class="get-through" href="#">mail@htmlacademy.ru</a>
-            </p>
+        <div class="footer-communication">
+          <p class="footer-feedback">
+            Обратная связь:
+            <a class="get-through" href="#">mail@htmlacademy.ru</a>
+          </p>
 
-            <p class="footer-developed">
-              Разработано &mdash;
-              <a class="cross-site" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
+          <p class="footer-developed">
+            Разработано &mdash;
+            <a class="cross-site" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
                 htmlacademy.ru
               </a>
-            </p>
-          </div>
-
+          </p>
         </div>
+
       </div>
+    </div>
   </footer>
 
   <!-- МОДАЛЬНОЕ ОКНО -->
@@ -537,7 +531,7 @@
     </div>
   </section>
 
-  <script src="js/script.js"></script>
+  <script src="js/min.script.js"></script>
 </body>
 
 </html>
